# shelleke

./: GlobalStates.qml  shell.qml
modules/common/: Config.qml
modules/ii/bar/: ClaudeUsageResource.qml  Resources.qml  ResourcesPopup.qml
modules/ii/mediaControls/: LyricsView.qml  MediaControls.qml  PlayerControl.qml
modules/ii/overview/: SearchWidget.qml
modules/pixel/: CONTRACT.md  README.md
modules/pixel/background/: PixelBackground.qml
modules/pixel/background/pixelscape/: Cargo.toml
modules/pixel/background/pixelscape/src/: main.rs  sprites.rs
modules/pixel/bar/: PixActiveWindow.qml  PixAppChip.qml  PixBarDivider.qml  PixBatteryChip.qml  PixBatteryPopup.qml  PixClock.qml  PixClockPopup.qml  PixControlButton.qml  PixMediaPopup.qml  PixStatItem.qml  PixStats.qml  PixSysHeader.qml  PixSysIconRow.qml  PixSysSwatchRow.qml  PixSystemMonitorPopup.qml  PixTray.qml  PixTrayItem.qml  PixWorkspaces.qml  PixelBar.qml  PixelBarPopup.qml
modules/pixel/common/: PixTheme.qml  pixicons_data.js
modules/pixel/design/: PixelBar.html  PixelPopups.html  PixelQuickSettings.html
modules/pixel/mediaControls/: PixLyricsView.qml  PixelMediaControls.qml
modules/pixel/monitors/: MonitorCard.qml  PixField.qml  PixSegment.qml  PixelMonitors.qml  PixelMonitorsContent.qml  ProfileEditor.qml  ProfileRow.qml  QuickModeBar.qml  SettingsScreen.qml  StepperRow.qml
modules/pixel/notificationPopup/: PixelNotificationItem.qml  PixelNotificationPopup.qml
modules/pixel/onScreenDisplay/: PixelOnScreenDisplay.qml
modules/pixel/overview/: PixelOverview.qml  PixelOverviewWidget.qml  PixelOverviewWindow.qml  PixelSearchItem.qml  PixelSearchWidget.qml
modules/pixel/quickSettings/: PixBluetoothManager.qml  PixCalendar.qml  PixNotifRow.qml  (+6 more)
modules/settings/: AdvancedConfig.qml
scripts/colors/: generate_colors_material.py  switchwall.sh
scripts/monitors/: hdm-control.py
services/: Ai.qml  ClaudeUsage.qml  Cliphist.qml  LauncherSearch.qml  LyricsService.qml  Monitors.qml  MprisController.qml
(+12 files in other folders)
